--- a/lol.html
+++ b/lol.html
@@ -5,6 +5,7 @@
 	<title>LOOOOOL</title>
 </head>
 <body>
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero eum dolor nulla deserunt fuga consectetur laborum asperiores, corrupti quos adipisci obcaecati minus nobis optio assumenda, et distinctio quisquam non atque!
+<h1>Lorem</h1>
+	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero eum dolor nulla deserunt fuga consectetur laborum asperiores, corrupti quos adipisci obcaecati minus nobis optio assumenda, et distinctio quisquam non atque!</p>
 </body>
 </html>
